--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon src/index.ts",
-    "start": "node build/index.js",
-    "build": "tsc -p ."
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lpabst/shop-platform.git"
@@ -19,9 +13,18 @@
     "url": "https://github.com/lpabst/shop-platform/issues"
   },
   "homepage": "https://github.com/lpabst/shop-platform#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon src/index.ts",
+    "start": "node build/index.js",
+    "build": "tsc -p ."
+  },
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
