--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
@@ -27,6 +28,7 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.36",
     "nodemon": "^2.0.16",
