--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
-version: "3.7"
+version: "3.8"
 
 services:
   db:
     container_name: shop.db
     image: mysql:5.7.12
-    restart: unless-stopped    
+    restart: unless-stopped
     ports:
-      - '3306:3306'
+      - "3306:3306"
     expose:
-      - '3306'
+      - "3306"
     volumes:
-      - 'mysql-data:/var/lib/mysql'
+      - "mysql-data:/var/lib/mysql"
     networks:
       - data
+
   api:
     container_name: shop.api
     restart: unless-stopped
@@ -24,10 +25,34 @@ services:
       - 8012:8012
     networks:
       - data
-    
+
+  search:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.2.2
+    container_name: shop.search
+    restart: unless-stopped
+    ports:
+      - 9200:9200
+    networks:
+      - data
+    volumes:
+      - search_1_data:/usr/share/elasticsearch/data
+    environment:
+      - cluster.name=shop.search
+      - node.name=shop.search.1
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - cluster.initial_master_nodes=shop.search.1
+      - xpack.security.enabled=false
+    mem_limit: 1g
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+
 networks:
   data:
 
 volumes:
   mysql-data:
     driver: local
+  search_1_data:
