--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.2.1",
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "celebrate": "^15.0.1",
