--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   db:
-    container_name: shop.db
+    container_name: docker.experiment.db
     image: mysql:5.7.12
     restart: unless-stopped
     ports:
@@ -15,7 +15,7 @@ services:
       - data
 
   api:
-    container_name: shop.api
+    container_name: docker.experiment.api
     restart: unless-stopped
     external_links:
       - db
@@ -28,7 +28,7 @@ services:
 
   search:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.2.2
-    container_name: shop.search
+    container_name: docker.experiment.search
     restart: unless-stopped
     ports:
       - 9200:9200
@@ -37,11 +37,11 @@ services:
     volumes:
       - search_1_data:/usr/share/elasticsearch/data
     environment:
-      - cluster.name=shop.search
-      - node.name=shop.search.1
+      - cluster.name=docker.experiment.search
+      - node.name=docker.experiment.search.1
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - cluster.initial_master_nodes=shop.search.1
+      - cluster.initial_master_nodes=docker.experiment.search.1
       - xpack.security.enabled=false
     mem_limit: 1g
     ulimits:
