--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.2.0",
     "bcrypt": "^5.0.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
